--- a/manifest-registration.yml
+++ b/manifest-registration.yml
@@ -5,5 +5,7 @@ applications:
   - route: registration-pal-back-benchers.apps.chicken.pal.pivotal.io
   memory: 1G
   instances: 1
+  env:
+    REGISTRATION_SERVER_ENDPOINT: http://pal-distributed-back-benchers.apps.chicken.pal.pivotal.io
   services:
   - tracker-registration-database
