--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -2,10 +2,10 @@ applications:
 - name: tracker-allocations
   path: ./applications/allocations-server/build/libs/allocations-server.jar
   routes:
-  - route: allocations-pal-back-benchers.apps.chicken.pal.pivotal.io
+  - route: allocations-pal-back-benchers.apps.pikes.pal.pivotal.io
   memory: 1G
   instances: 1
   env:
-    REGISTRATION_SERVER_ENDPOINT: http://allocations-server.apps.chicken.pal.pivotal.io
+    REGISTRATION_SERVER_ENDPOINT: http://registration-pal-back-benchers.apps.pikes.pal.pivotal.io
   services:
   - tracker-allocations-database
