--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         springCloudServicesClientLibrariesVersion = "Dalston.SR1"
         springCloudServicesVersion = "Dalston.SR1"
         springCloudCommonsVersion ="1.2.2.RELEASE"
+        pivotalCircuitBreakerVersion ="1.5.0.RELEASE"
     }
 
     repositories {
